# eprints-svn-mirror

./: CHANGELOG.FULL  TODO.FULL  test1
3.0.3-rc-1/system/: CHANGELOG
archive/trunk/: test1
branches/database/: CHANGELOG
branches/devel-tdb01r/: CHANGELOG
docs/pod/: functions.pod
docs_ep2/: mkdocs.pl
docs_ep2/imgsrc/: metafieldsoo.dia
docs_ep2/lateximages/: metafieldsoo.eps
docs_ep2/pod/: backup.pod  configarchive.pod  configeprints.pod  contact.pod  history.pod  howto.pod  intro.pod  logo.pod  metadata.pod  reqsoftware.pod  structure.pod  troubleshooting.pod  updating.pod  vlit.pod
documentation/: .cvsignore  Makefile  generate_help_html.pl  preparebody.pl
ep2_docs/: Makefile  alpha.xml  eprints.entities  history.xml  mkdocbook.pl  reqsoftware.xml
epms/bittorrent/: bittorrent.epmi
epms/datashare/: datashare.epmi
epms/trunk/: build_package.pl  delete_epm.pl  deposit_epm.pl
epms/tweepository/: tweepository.epmi
eprints2/release/: install.pl.in  testpackage.pl
extensions/rae/: README.pod  moe  report  select
installer/: installer-config.pl  installer.pl  required
latexcgi/: rendertex
release/: CHANGELOG.FULL  Makefile  configure.in  eprints.spec  eprints3.spec  install.pl.in  internal_makemsi.pl  internal_makepackage.pl  makepackage.pl  makepackage.sh  perlmodules.pl  rpmpatch.sh  testpackage.pl  versions.txt
release/conf/: files.conf
release/debian/: changelog  control  files
release/install-scripts/: ChangeLog  Makefile.in  README.UPGRADING  aclocal.m4  findfiles.pl  setsitevar  update_apache_conf
release/licenses/: copyright.txt
release_ep2/: Makefile  configure.in  install-eprints.pl  install.pl  install.pl.in  makepackage.pl  perlmodules.pl  versions.txt
release_ep2/conf/: dirs.conf  files.conf
release_ep2/licenses/: gplin.txt
system/: AUTHORS  CHANGELOG  NEWS  TODO
system/archivecfg/: ArchiveConfig.pm  ArchiveMetadataFieldsConfig.pm  ArchiveOAIConfig.pm  ArchiveRenderConfig.pm  ArchiveTextIndexingConfig.pm  citations-en.xml  template-en.xml
system/cfg/: languages.xml
system/cgi/: advsearch  confirm  counter  export  latest  latest_tool  register  reset_password  search  set_lang  user
system/lib/: AnApache.pm  Archive.pm  Auth.pm  Config.pm  DataObj.pm  DataSet.pm  Database.pm  Document.pm  EPrint.pm  Index.pm  Latex.pm  MetaField.pm  OpenArchives.pm  Plugin.pm  Plugins.pm  Probity.pm  Rewrite.pm  SearchCondition.pm  SearchExpression.pm  SearchField.pm  Session.pm  Subject.pm  SubmissionForm.pm  Subscription.pm  SystemSettings.pm  Utils.pm  VLit.pm  XML.pm
system/perl_lib/: EPrints.pm
system/phrases/: archive-en-current  system-en-current
system/static/: index.html
system/tests/: 30_search.pl  use2.pl  xmldom.pl
tags/3.0.4-rc-1/release/: configure.in
tags/eprints2-alpha-1/: CHANGELOG.FULL
tools/SOAP-ISIWoK/: MANIFEST  MANIFEST.SKIP  Makefile.PL  README
tools/Text-Scigen/: MANIFEST  MANIFEST.bak
tools/apache-debian/: README.TXT  apache2ctl  bashrc  envvars  httpd.conf
tools/debian_build/: ProcessChangelog.java  README  ep_build.sh
tools/irstats/trunk/irstats/: AUTHORS  INSTALL  LICENSE  PHRASES.TXT  README  configure.in
tools/irstats/trunk/irstats/cgi/: irstats.cgi.in
tools/irstats/trunk/irstats/etc/: irstats.conf.in
tools/irstats/trunk/irstats/htdocs/: generic.css
tools/irstats/trunk/irstats/local_cfg/cfg/cfg.d/: eprint_render.pl
tools/irstats/trunk/irstats/perl_lib/: IRStats.pm
tools/irstats/trunk/irstats/perl_lib/ChartDirector/: IRStats.pm
tools/irstats/trunk/irstats/perl_lib/IRStats/: CLI.pm  Cache.pm  Configuration.pm  DatabaseInterface.pm  GUI.pm  Params.pm  Visualisation.pm
tools/irstats/trunk/irstats/perl_lib/IRStats/CLI/: convert_ip_to_host.pm  extract_generic_eprints.pm  extract_metadata_from_archive.pm  import_metadata.pm  update_metadata.pm  update_table.pm
tools/irstats/trunk/irstats/perl_lib/IRStats/GUI/: d2.pm  dashboard.pm  last_year.pm
tools/irstats/trunk/irstats/perl_lib/IRStats/Update/Filter/: AbstractFilter.pm  Institution.pm  NegateHandler.pm  RepeatsFilter.pm  SearchParser.pm  SelfReferrerFilter.pm
tools/irstats/trunk/irstats/perl_lib/IRStats/Update/Handler/: MyHandler.pm
tools/irstats/trunk/irstats/perl_lib/IRStats/Update/Hit/: MyHit.pm
tools/irstats/trunk/irstats/perl_lib/IRStats/Update/Parser/: Access.pm  Accesslog.pm  ApacheDSpace.pm  ApacheEPrints.pm
tools/irstats/trunk/irstats/perl_lib/IRStats/UserInterface/: Controls.pm
tools/irstats/trunk/irstats/perl_lib/IRStats/View/: AllMonthlyDownloadsGraph.pm  DownloadCountHTML.pm  MonthlyDownloadsGraph.pm  MonthlyUniqueVisitorsGraph.pm  RandomFromTopTenHTML.pm  RawDataTableHTML.pm  ReferrerGraph.pm  SearchEngineGraph.pm  TopCountriesTable.disabled  TopCountriesTable.pm  TopItemHTML.pm  TopTenAcademies.disabled  TopTenAuthorsTable.pm  TopTenMonthlyDownloadsGraph.pm  TopTenNonSearchReferrers.pm  TopTenTable.pm  TopTenTableDashLinked.pm
tools/irstats/trunk/irstats/perl_lib/IRStats/Visualisation/: Graph.pm
tools/irstats/trunk/irstats/perl_lib/IRStats/Visualisation/Graph/: Bar.pm  Graph.pm.bak  GraphLegend.pm  Line.pm  Pie.pm
tools/irstats/trunk/irstats/perl_lib/IRStats/Visualisation/Table/: HTML.pm  HTML_Columned.pm
tools/mysqlhotcopy/: mysqlhotcopy
tools/sword2-dir-listener/: CONFIG  CONFIG_EXAMPLE  README  config_example  watch_folder.pl
transfer/: import_cog_data  import_cog_users  mktest  startup.pl
transfer/EPrintSite/: SiteInfo.pm  SiteRoutines.pm  Validate.pm  lemurprints.pm
trunk/: CHANGELOG.FULL  README  TODO.FULL
trunk/docs_ep2/: mkdocs.pl
trunk/documentation/: Makefile
trunk/ep2_docs/: alpha.xml  eprints.entities  reqsoftware.xml
trunk/release/install-scripts/: ChangeLog  Makefile.in  README.UPGRADING  configure.in  setsitevar  update_apache_conf
trunk/release_ep2/: aclocal.m4  configure.in  install-eprints.pl  install.pl  install.pl.in  makepackage.pl
trunk/release_ep2/conf/: dirs.conf  files.conf
trunk/release_ep2/licenses/: gplin.txt
website/: .cvsignore  Makefile  build-site.pl  gimp.script  mmrg-sideicons.scm  news.conf  template.html
(+2335 files in other folders)
